Add aight (IE8 compatability) and d3, create view format

--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -45,8 +45,8 @@
 	<section>
 	  <label for="blood-pressure">Is the patient on medication?</label>
 	  <div class="input-wrapper">
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="1"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="true"> Yes</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="false" checked> No</span>
 	  </div>
 	</section>
 
