--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -1,1 +1,25 @@
-<p>This is the partial for view 111.</p>
+<div class="patient-status good">
+
+<b class="title">Good:</b> Patient has met the blood pressure goal and the treatment should continue.
+
+</div>
+
+<div>Recommendation: "Initiate thiazide-type diuretic or ACEI or ARB or CCB, alone or in combination. ACEIs and ARBs should not be used in combination."</div>
+
+
+<section class="bp-goal-comparison">
+  <table>
+    <tr>
+      <td width="32%">Goal Blood Pressure:</td>
+      <td class="info-column" width="20%">120</td>
+      <td class="info-column" width="20%">80</td>
+      <td class="info-column" width="27%"></td>
+    </tr>
+    <tr>
+      <td>Current Blood Pressure:</td>
+      <td class="info-column">140</td>
+      <td class="info-column">80</td>
+    </tr>
+  </table>
+</section>
+<button>Save patient information</button>
