--- a/app/css/main.css
+++ b/app/css/main.css
@@ -97,13 +97,50 @@ form tr td {
   padding: 8px;
 }
 
-form td.info-column {
+td.info-column {
   text-align: center;
 }
 
 form select {
   min-width:200px;
 }
+
+
+/* Data visualization styling */
+div.patient-status {
+  width: 70%;
+  padding: 18px;
+  margin: 0 auto 18px;
+  border: solid #d7d7d7 1px;
+  border-radius: 3px;
+}
+
+div.patient-status.good {
+  background-color: #dff0d8;
+  color: #3c763d;
+}
+
+div.patient-status.okay {
+  background-color: #fcf8e3;
+  color: #8a6d3b;
+}
+
+div.patient-status.bad {
+  background-color: #f2dede;
+  color: #a94442;
+}
+
+section.bp-goal-comparison td {
+  padding: 16px 0;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+section.bp-goal-comparison td:nth-child(1) {
+  font-size: 14px;
+  font-weight: normal;
+}
+
 
 
 /* Typography and coloring */
