--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -6,11 +6,10 @@
 	    <input type="number" ng-model="pt.age" id="age" />
 	  </div>
 	</section>
-
 	<section>
 	  <label for="race">Patient's race:</label>
 	  <div class="input-wrapper">
-	    <select name="race" ng-model="pt.race" ng-options="race for race in races"></select>
+	    <select name="race" ng-model="pt.race" ng-options="race for race in pt.races"></select>
 	  </div>
 	</section>
 
@@ -18,40 +17,40 @@
 	  <label for="blood-pressure">Patient's blood pressure:</label>
 	  <div class="input-wrapper">
 	    <span class="field-label">Systolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.BloodPressure.Systolic" id="blood-pressure-syst" />
+	    <input type="number" name="blood-pressure" ng-model="pt.bp.Systolic" id="blood-pressure-syst" />
 	  </div>
 	  <div class="input-wrapper">
 	    <span class="field-label">Diastolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.BloodPressure.Diastolic" id="blood-pressure-diast" />
+	    <input type="number" name="blood-pressure" ng-model="pt.bp.Diastolic" id="blood-pressure-diast" />
 	  </div>
 	</section>
 
 	<section>
 	  <label for="diabetes">Does the patient have diabetes?</label>
 	  <div class="input-wrapper">
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.diabetes" name="diabetes" value="1"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.diabetes" name="diabetes" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasDiabetes" name="diabetes" value="1"> Yes</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasDiabetes" name="diabetes" value="0" checked> No</span>
 	  </div>
 	</section>
 
 	<section>
 	  <label for="blood-pressure">Does the patient have CKD?</label>
 	  <div class="input-wrapper">
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.CKD" name="ckd" value="1"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.CKD" name="ckd" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasCKD" name="ckd" value="1"> Yes</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasCKD" name="ckd" value="0" checked> No</span>
 	  </div>
 	</section>
 
 	<section>
-	  <label for="blood-pressure">Is the patient on medication?</label>
+	  <label for="meds">Is the patient on medication?</label>
 	  <div class="input-wrapper">
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="true"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.medication.isOnMedication" name="meds" value="false" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" name="meds" value="1" ng-model="pt.isOnMedication"> Yes</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.isOnMedication" name="meds" value="0" checked> No</span>
 	  </div>
 	</section>
 
 
-	<section class="medications" ng-show="pt.medication.isOnMedication">
+	<section class="medications" ng-show="pt.isOnMedication">
 	  <table id="medications" width="100%">
 	    <tr class="header">
 	      <td width="40%">Drug name</td>
@@ -59,10 +58,10 @@
 	      <td class="info-column" width="15%">Max dosage</td>
 	      <td class="info-column" width="15%">Remove</td>
 	    </tr>
-	    <tr ng-repeat="drug in pt.medication.medicationDetail">
+	    <tr ng-repeat="drug in pt.medication">
 	      <td width="30%">{{ drug.name }}</td>
-	      <td width="25%" class="info-column">{{ drug.currentDose }}{{ drug.doseUnit }}</td>
-	      <td width="25%" class="info-column">{{ drug.maxDose }}{{ drug.doseUnit }}</td>
+	      <td width="25%" class="info-column">{{ drug.dose }}{{ drug.unit }}</td>
+	      <td width="25%" class="info-column">{{ drug.maxDose }}{{ drug.unit }}</td>
 	      <td width="20%" class="info-column"><span class="x-med">x</span></td>
 	    </tr>
 	  </table>
