--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -6,7 +6,6 @@
 
 <div>Recommendation: "Initiate thiazide-type diuretic or ACEI or ARB or CCB, alone or in combination. ACEIs and ARBs should not be used in combination."</div>
 
-
 <section class="bp-goal-comparison">
   <table>
     <tr>
@@ -23,3 +22,9 @@
   </table>
 </section>
 <button>Save patient information</button>
+
+<section>
+  <linechart data="data" options="options" mode="" height="300" width="500"></linechart>
+</section>
+
+
