--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -1,5 +1,4 @@
-<form>
-
+<form ng-submit="goToDataViz()">
 	<section>
 	  <label for="age">Patient's age:</label>
 	  <div class="input-wrapper">
@@ -17,11 +16,11 @@
 	  <label for="blood-pressure">Patient's blood pressure:</label>
 	  <div class="input-wrapper">
 	    <span class="field-label">Systolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.bp.Systolic" id="blood-pressure-syst" />
+	    <input type="number" name="blood-pressure" ng-model="pt.currentBP.Systolic" id="blood-pressure-syst" />
 	  </div>
 	  <div class="input-wrapper">
 	    <span class="field-label">Diastolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.bp.Diastolic" id="blood-pressure-diast" />
+	    <input type="number" name="blood-pressure" ng-model="pt.currentBP.Diastolic" id="blood-pressure-diast" />
 	  </div>
 	</section>
 
@@ -67,6 +66,6 @@
 	  </table>
 	</section>
 
-	<input type="submit" value="Get recommendations">
+<input type="submit" value="Get recommendations">
 
 </form>
