--- a/app/partials/dataViz.html
+++ b/app/partials/dataViz.html
@@ -21,10 +21,10 @@
     </tr>
   </table>
 </section>
-<button>Save patient information</button>
 
 <section>
-  <linechart data="data" options="options" mode="" height="300" width="500"></linechart>
+  <linechart data="data" id="chart" options="options" mode="" height="300" width="500"></linechart>
 </section>
+<button>Save patient information</button>
 
 
