--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -1,34 +1,64 @@
-<form ng-submit="goToDataViz()">
+<form name="dataForm" class="data-form" novalidate ng-submit="goToDataViz()">
 	<section>
 	  <label for="age">Patient's age:</label>
 	  <div class="input-wrapper">
-	    <input type="number" ng-model="pt.age" id="age" />
-	  </div>
+	    <input type="number" ng-model="pt.age" id="age" required name="age" min="0" max="200" />
+	  </div>	 
+	  <div ng-show="dataForm.age.$dirty && dataForm.age.$invalid">
+	  	<span class="error" ng-show="dataForm.age.$error.required">
+		  Please input a number between 0-200.
+	  	</span>
+	    <span class="error" ng-show="dataForm.age.$error.min || dataForm.age.$error.max">
+		  Number outside age range. Age must be a number between 0-200. 
+	  	</span>
+	  </div> 
 	</section>
 	<section>
 	  <label for="race">Patient's race:</label>
 	  <div class="input-wrapper">
-	    <select name="race" ng-model="pt.race" ng-options="race for race in pt.races"></select>
+	    <select name="race" required ng-model="pt.race" ng-options="race for race in pt.races">
+	    	<option>black</option>
+	    </select>
 	  </div>
+
 	</section>
 
 	<section>
 	  <label for="blood-pressure">Patient's blood pressure:</label>
-	  <div class="input-wrapper">
-	    <span class="field-label">Systolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.currentBP.Systolic" id="blood-pressure-syst" />
-	  </div>
-	  <div class="input-wrapper">
-	    <span class="field-label">Diastolic:</span>
-	    <input type="number" name="blood-pressure" ng-model="pt.currentBP.Diastolic" id="blood-pressure-diast" />
-	  </div>
+	  <div class="blood-pressure" id="blood-pressure">
+		  <div class="input-wrapper">
+		    <span class="field-label">Systolic:</span>
+		    <input type="number" required name="systolicBP" ng-model="pt.currentBP.Systolic" id="blood-pressure-syst" min="50" max="400"/>    
+		  </div>
+		  <div ng-show="dataForm.systolicBP.$dirty && dataForm.systolicBP.$invalid">
+		  	<span class="error" ng-show="dataForm.systolicBP.$error.required">
+			  Please input a number between 50-400.
+		  	</span>
+		    <span class="error" ng-show="dataForm.systolicBP.$error.min || dataForm.systolicBP.$error.max">
+			  Number outside sytolic BP range. Systolic BP must be a number between 50-400. 
+		  	</span>
+		  </div> 
+
+		  <div class="input-wrapper">
+		    <span class="field-label">Diastolic:</span>
+		    <input type="number" required name="diastolicBP" ng-model="pt.currentBP.Diastolic" id="blood-pressure-diast" min="0" max="200"/>
+		  </div>
+		  <div ng-show="dataForm.diastolicBP.$dirty && dataForm.diastolicBP.$invalid">
+		  	<span class="error" ng-show="dataForm.diastolicBP.$error.required">
+			  Please input a number between 0-200.
+		  	</span>
+		    <span class="error" ng-show="dataForm.diastolicBP.$error.min || dataForm.diastolicBP.$error.max">
+			  Number outside diastolic BP range. Diastolic BP must be a number between 0-200. 
+		  	</span>
+		  </div>   
+		</div>
 	</section>
 
 	<section>
 	  <label for="diabetes">Does the patient have diabetes?</label>
 	  <div class="input-wrapper">
 	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasDiabetes" name="diabetes" value="1"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasDiabetes" name="diabetes" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasDiabetes" name="diabetes" value="0"> No</span>
 	  </div>
 	</section>
 
@@ -36,7 +66,7 @@
 	  <label for="blood-pressure">Does the patient have CKD?</label>
 	  <div class="input-wrapper">
 	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasCKD" name="ckd" value="1"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasCKD" name="ckd" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.hasCKD" name="ckd" value="0" > No</span>
 	  </div>
 	</section>
 
@@ -44,7 +74,7 @@
 	  <label for="meds">Is the patient on medication?</label>
 	  <div class="input-wrapper">
 	    <span class="radio-wrapper"><input type="radio" name="meds" value="1" ng-model="pt.isOnMedication"> Yes</span>
-	    <span class="radio-wrapper"><input type="radio" ng-model="pt.isOnMedication" name="meds" value="0" checked> No</span>
+	    <span class="radio-wrapper"><input type="radio" ng-model="pt.isOnMedication" name="meds" value="0"> No</span>
 	  </div>
 	</section>
 
@@ -66,6 +96,6 @@
 	  </table>
 	</section>
 
-<input type="submit" value="Get recommendations">
+<input type="submit" value="Get recommendations" ng-disabled="data-form.$invalid">
 
 </form>
