'systolic BP' error message typo

--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -35,7 +35,7 @@
 			  Please input a number between 50-400.
 		  	</span>
 		    <span class="error" ng-show="dataForm.systolicBP.$error.min || dataForm.systolicBP.$error.max">
-			  Number outside sytolic BP range. Systolic BP must be a number between 50-400. 
+			  Number outside systolic BP range. Systolic BP must be a number between 50-400. 
 		  	</span>
 		  </div> 
 
