--- a/app/partials/dataEntry.html
+++ b/app/partials/dataEntry.html
@@ -86,7 +86,7 @@
         <td class="info-column" width="15%">Max dosage</td>
         <td class="info-column" width="15%">Remove</td>
       </tr>
-      <tr ng-repeat="drug in pt.medication">
+      <tr ng-repeat="drug in pt.medications">
         <td width="30%">{{ drug.name }}</td>
         <td width="25%" class="info-column">{{ drug.dose }}{{ drug.unit }}</td>
         <td width="25%" class="info-column">{{ drug.maxDose }}{{ drug.unit }}</td>
